# ebrust-zh-bots

./: .gitignore  Cargo.toml  README.md  env.sh
migrations/: V1__initial.sql  V2__chat_id_record.sql
src/: controller.rs  handler.rs  main.rs  repository.rs
src/controller/: delete_eval.rs  eval_state.rs  get_eval_link.rs  new_eval.rs  page_data.rs  update_msg_id.rs  wait_eval.rs
src/handler/: callback_query.rs  error.rs  loop.rs  new_message.rs  render.rs  tg_client.rs
src/repository/: id.rs  playground_record.rs
src/service/: playground.rs
