[package]
name = "ebrust-zh-bots"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[dependencies]
telegram_types = { version = "0.7", features = ["high"] }
compio = { version = "0.13", features = ["macros", "signal"] }
cyper = { version = "0.2", features = ["http2", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1", features = ["async-await"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
flume = "0.11"
rusqlite = { version = "0.32", features = ["modern-full"] }
chrono = "0.4"
thiserror = "2"
futures = "0.3"
htmlize = "1"
event-listener = "5"
refinery = { git = "https://github.com/rust-db/refinery.git", features = [
    "rusqlite",
] }

[patch.crates-io]
h2 = { git = "https://github.com/hyperium/h2.git#07e528" }
